Fix spacing of stacked headers in CSS

--- a/liabilities/style.css
+++ b/liabilities/style.css
@@ -24,7 +24,7 @@ blockquote > p:last-child { margin-bottom: 0 }
 h1, h2 { margin: .75em 0 22px 0; border-bottom: 1px solid #aab }
 h3, h4, h5, h6 { margin: 1.5em 0 22px 0 }
 h2, h3, h4, h5, h6, .metadata { font-family: Helvetica,Arial,sans-serif }
-h1:first-child { margin-top: 0 }
+h1:first-child, h1 + h2, h2 + h3, h3 + h4, h4 + h5, h5 + h6 { margin-top: 0 }
 h1 { font-size: 2em }
 h2 { font-size: 1.59em }
 h3 { font-size: 1.26em }
